--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: Lucifer's Thought
-subtitle:
-description:
-keywords:
+subtitle: hummm
+description: this is description
+keywords: 
 author: Lucifer
 language:
 timezone:
@@ -31,6 +31,7 @@ skip_render:
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
+auto_spacing: true
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
@@ -43,6 +44,7 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
+
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -51,7 +53,7 @@ highlight:
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
+  order_by: -time
   
 # Category & Tag
 default_category: uncategorized
