--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "acorn": "^6.1.1",
     "hexo": "^3.8.0",
+    "hexo-admin": "^2.3.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-stylus": "^0.3.3",
     "hexo-renderer-marked": "^0.3.2",
-    "hexo-server": "^0.3.3"
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-server": "^0.3.3",
+    "hexo-toc": "^1.1.0",
+    "npm": "^6.9.0"
   }
 }
