--- a/themes/alpha-dust/_config.yml
+++ b/themes/alpha-dust/_config.yml
@@ -19,7 +19,7 @@ archive_date_format: MMM YYYY
 # Comments.
 comments:
   # Disqus comments
-  disqus_shortname: 
+  disqus_shortname: short name?
 
 # Google Analytics Tracking ID
 google_analytics: UA-136787955-1
